--- a/block-BJaaaj/code/index.html
+++ b/block-BJaaaj/code/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accessing and Assigning Variable</title>
+    <title>Accessing and Assigning Variables</title>
   </head>
   <body>
     <h1>Accessing and Assigning Variable</h1>
